--- a/app.html
+++ b/app.html
@@ -356,8 +356,8 @@
                                     <div class='tab' id='tab-credit'>Credits</div>
                                     <div class='tab' id='tab-follow'>Follow</div>
                                 </div>
-                                <div class='pop' id='pop-mod'><img src='img/popup-album.png' width='600' height='275' class='center'>
-                                    <div class='textcenter' id='mod'><b>Thank you for using the template!</b><br> Template made by Artemiy Kopych</div>
+                                <div class='pop' id='pop-mod'><img src='img/popup-album.png' width='600' height='300' class='center'>
+                                    <div class='textcenter' id='mod'><b>Eclise Credits</b><br> Cosmic <br>Made the sprites and splashes and stuff<br> Rizsim Studios<br> Did coding and stuff for this demo</div>
                                 </div>
                                 <div class='pop' id='pop-tuto'>
                                     <div class='container'>
