--- a/app.html
+++ b/app.html
@@ -357,7 +357,7 @@
                                     <div class='tab' id='tab-follow'>Follow</div>
                                 </div>
                                 <div class='pop' id='pop-mod'><img src='img/popup-album.png' width='600' height='300' class='center'>
-                                    <div class='textcenter' id='mod'><b>Eclise Credits</b><br> Cosmic <br>Made the sprites and splashes and stuff<br> Rizsim Studios<br> Did coding and stuff for this demo</div>
+                                    <div class='textcenter' id='mod'><b>Cosmic</b> <br>Made the sprites and splashes and stuff<br> <b> Rizsim Studios</b> <br> Did coding and stuff for this demo</div>
                                 </div>
                                 <div class='pop' id='pop-tuto'>
                                     <div class='container'>
