--- a/app.html
+++ b/app.html
@@ -351,7 +351,7 @@
                         <div class='scale'>
                             <div class='box'>
                                 <div class='box-tab'>
-                                    <div class='tab' id='tab-mod'>Mod Credit</div>
+                                    <div class='tab' id='tab-mod'>Mod Credits</div>
                                     <div class='tab' id='tab-tuto'>Help</div>
                                     <div class='tab' id='tab-credit'>Credits</div>
                                     <div class='tab' id='tab-follow'>Follow</div>
